data/derived/sp14/progs/unify/prog3768.ml.out
Characters 128-138:
  if sum > 10 then let result = a @ sum mod 10 in
                                    ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
